--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>图片轮播</title>
+  <link rel="icon" type="image/x-icon" class="js-site-favicon" href="https://github.githubassets.com/favicon.ico">
   <link rel="stylesheet" href="./main.css">
   <link rel="stylesheet" href="//at.alicdn.com/t/font_1230818_fbznvade3ji.css">
 </head>
